--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Console log colors",
     "colorify logs"
   ],
-  "author": "Akash Yadav <akash.y@gmail.com>",
+  "author": "Akash Yadav <ay157311@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/iamakashyadav/colorify-logger/issues"
