--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
     },
+    "include": [
+        "src"
+    ],
     "exclude": [
         "node_modules",
         "**/__tests__/*"
