--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm",
+  "name": "colorify-logger",
   "version": "1.0.0",
   "description": "A library to clorify your console logs",
   "main": "lib/index.js",
